Fixed . as empty value, Atomic reflection issue